# base-jobs

./: .ansible-lint  .gitreview  README.rst  setup.cfg  test-requirements.txt  tox.ini  zuul.yaml
doc/source/: base.rst  conf.py  docker-image.rst  index.rst  jobs.rst  misc-jobs.rst
playbooks/artifacts/: promote-deployment.yaml  promote.yaml
playbooks/base/: post-logs.yaml  pre.yaml
playbooks/base-minimal/: cleanup.yaml  post-logs.yaml
playbooks/base-test/: cleanup.yaml  post-logs-swift.yaml  post-logs.yaml  pre.yaml
playbooks/buildset-registry/: post.yaml  pre-test.yaml  pre.yaml
playbooks/docker-image/: run.yaml
playbooks/docs/: promote.yaml
playbooks/release-python/: post.yaml  pre.yaml
playbooks/tox-docs/: publish.yaml
playbooks/upload-git-mirror/: run.yaml
roles/configure-unbound/tasks/: main.yaml
roles/mirror-info/templates/: mirror_info.sh.j2
roles/submit-logstash-jobs/defaults/: main.yaml
roles/write-root-marker/tasks/: main.yaml
tests/: vars.yaml
zuul.d/: jobs.yaml  nodesets.yaml  project-templates.yaml  project.yaml  secrets.yaml
