[metadata]
name = base-jobs
summary = Base jobs for OpenDev
description-file =
    README.rst
author = OpenDev Team
author-email = openstack-infra@lists.openstack.org
home-page = http://opendev.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
